--- a/tvnao/tvnao_widget.ui
+++ b/tvnao/tvnao_widget.ui
@@ -107,6 +107,12 @@
      </item>
      <item>
       <widget class="QPushButton" name="buttonGuide">
+       <property name="maximumSize">
+        <size>
+         <width>30</width>
+         <height>16777215</height>
+        </size>
+       </property>
        <property name="toolTip">
         <string>Show TV guide (Ctrl+G)</string>
        </property>
