--- a/tvnao/tvnao_widget.ui
+++ b/tvnao/tvnao_widget.ui
@@ -86,6 +86,9 @@
        <property name="placeholderText">
         <string>Filter ...</string>
        </property>
+       <property name="clearButtonEnabled">
+        <bool>true</bool>
+       </property>
       </widget>
      </item>
      <item>
