--- a/tvnao.qrc
+++ b/tvnao.qrc
@@ -1,5 +1,6 @@
 <!DOCTYPE RCC><RCC version="1.0">
 <qresource>
+<file>./icons/application-exit.svg</file>
 <file>./icons/configure.svg</file>
 <file>./icons/media-playback-start.svg</file>
 <file>./icons/view-refresh.svg</file>
