--- a/tvnao.qrc
+++ b/tvnao.qrc
@@ -2,6 +2,7 @@
 <qresource>
 <file>./icons/application-exit.svg</file>
 <file>./icons/configure.svg</file>
+<file>./icons/document-open.svg</file>
 <file>./icons/media-playback-start.svg</file>
 <file>./icons/view-refresh.svg</file>
 <file>./icons/video-television.svg</file>
