--- a/tvnao/settings_dialog.ui
+++ b/tvnao/settings_dialog.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>400</width>
-    <height>375</height>
+    <height>380</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -84,10 +84,25 @@
         <item>
          <layout class="QVBoxLayout" name="verticalLayout3">
           <item>
-           <widget class="QLineEdit" name="playerPath"/>
+           <layout class="QHBoxLayout" name="horizontalLayout">
+            <item>
+             <widget class="QLineEdit" name="playerPath"/>
+            </item>
+            <item>
+             <widget class="QPushButton" name="playerButton">
+              <property name="text">
+               <string/>
+              </property>
+             </widget>
+            </item>
+           </layout>
           </item>
           <item>
-           <widget class="QLineEdit" name="playerOptions"/>
+           <widget class="QLineEdit" name="playerOptions">
+            <property name="clearButtonEnabled">
+             <bool>true</bool>
+            </property>
+           </widget>
           </item>
          </layout>
         </item>
