--- a/tvnao/settings_dialog.ui
+++ b/tvnao/settings_dialog.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>400</width>
-    <height>380</height>
+    <height>412</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -107,6 +107,13 @@
          </layout>
         </item>
        </layout>
+      </item>
+      <item>
+       <widget class="QCheckBox" name="playerSingle">
+        <property name="text">
+         <string>Keep single player window</string>
+        </property>
+       </widget>
       </item>
      </layout>
     </widget>
