--- a/tvnao.qrc
+++ b/tvnao.qrc
@@ -3,8 +3,14 @@
 <file>icons/breeze/index.theme</file>
 <file>icons/breeze/actions/16/application-exit.svg</file>
 <file>icons/breeze/actions/16/configure.svg</file>
+<file>icons/breeze/actions/16/dialog-cancel.svg</file>
+<file>icons/breeze/actions/16/dialog-close.svg</file>
+<file>icons/breeze/actions/16/dialog-ok.svg</file>
 <file>icons/breeze/actions/16/document-open.svg</file>
+<file>icons/breeze/actions/16/go-next.svg</file>
+<file>icons/breeze/actions/16/go-previous.svg</file>
 <file>icons/breeze/actions/16/media-playback-start.svg</file>
+<file>icons/breeze/actions/16/view-calendar-list.svg</file>
 <file>icons/breeze/actions/16/view-refresh.svg</file>
 <file>icons/breeze/devices/22/video-television.svg</file>
 <file>icons/breeze/devices/64/video-television.svg</file>
