add one more missing icon

--- a/tvnao.qrc
+++ b/tvnao.qrc
@@ -7,6 +7,7 @@
 <file>icons/breeze/actions/16/dialog-close.svg</file>
 <file>icons/breeze/actions/16/dialog-ok.svg</file>
 <file>icons/breeze/actions/16/document-open.svg</file>
+<file>icons/breeze/actions/16/edit-copy.svg</file>
 <file>icons/breeze/actions/16/go-next.svg</file>
 <file>icons/breeze/actions/16/go-previous.svg</file>
 <file>icons/breeze/actions/16/media-playback-start.svg</file>
