make guide viewer more interactive

--- a/tvnao/guide_viewer_dialog.ui
+++ b/tvnao/guide_viewer_dialog.ui
@@ -77,7 +77,11 @@
     </layout>
    </item>
    <item>
-    <widget class="QTextBrowser" name="textBrowser"/>
+    <widget class="QTextBrowser" name="textBrowser">
+     <property name="placeholderText">
+      <string>loading…</string>
+     </property>
+    </widget>
    </item>
    <item>
     <widget class="QDialogButtonBox" name="buttonBox">
