--- a/tvnao/timeshift_dialog.ui
+++ b/tvnao/timeshift_dialog.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>Dialog</class>
- <widget class="QDialog" name="Dialog">
+ <class>TimeshiftDialog</class>
+ <widget class="QDialog" name="TimeshiftDialog">
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -14,37 +14,24 @@
    <string>Dialog</string>
   </property>
   <layout class="QGridLayout" name="gridLayout_2">
-   <item row="0" column="0">
-    <widget class="QLabel" name="hostLabel">
-     <property name="text">
-      <string>Host:</string>
+   <item row="5" column="2" colspan="2">
+    <widget class="QDialogButtonBox" name="buttonBox">
+     <property name="orientation">
+      <enum>Qt::Horizontal</enum>
+     </property>
+     <property name="standardButtons">
+      <set>QDialogButtonBox::Cancel</set>
      </property>
     </widget>
    </item>
-   <item row="0" column="1" colspan="2">
+   <item row="0" column="3">
     <widget class="QLabel" name="portLabel">
      <property name="text">
       <string>Port:</string>
      </property>
     </widget>
    </item>
-   <item row="1" column="0">
-    <widget class="QLineEdit" name="hostEdit"/>
-   </item>
-   <item row="3" column="0" colspan="3">
-    <widget class="QListWidget" name="listWidget"/>
-   </item>
-   <item row="2" column="0">
-    <widget class="QLabel" name="audioLabel">
-     <property name="text">
-      <string>Audio Channel:</string>
-     </property>
-    </widget>
-   </item>
-   <item row="1" column="1" colspan="2">
-    <widget class="QLineEdit" name="portEdit"/>
-   </item>
-   <item row="2" column="1" colspan="2">
+   <item row="2" column="3">
     <widget class="QSpinBox" name="audioSpinBox">
      <property name="minimum">
       <number>1</number>
@@ -54,13 +41,57 @@
      </property>
     </widget>
    </item>
-   <item row="4" column="1" colspan="2">
-    <widget class="QDialogButtonBox" name="buttonBox">
-     <property name="orientation">
-      <enum>Qt::Horizontal</enum>
+   <item row="3" column="3">
+    <widget class="QDateEdit" name="dateEdit">
+     <property name="displayFormat">
+      <string>ddd d.MM.yy</string>
      </property>
-     <property name="standardButtons">
-      <set>QDialogButtonBox::Cancel</set>
+     <property name="calendarPopup">
+      <bool>true</bool>
+     </property>
+    </widget>
+   </item>
+   <item row="1" column="3">
+    <widget class="QLineEdit" name="portEdit">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
+    </widget>
+   </item>
+   <item row="3" column="2">
+    <widget class="QPushButton" name="nextButton">
+     <property name="text">
+      <string>Next</string>
+     </property>
+    </widget>
+   </item>
+   <item row="3" column="1">
+    <widget class="QPushButton" name="prevButton">
+     <property name="text">
+      <string>Prev</string>
+     </property>
+    </widget>
+   </item>
+   <item row="2" column="1" colspan="2">
+    <widget class="QLabel" name="audioLabel">
+     <property name="text">
+      <string>Audio Channel:</string>
+     </property>
+    </widget>
+   </item>
+   <item row="1" column="1" colspan="2">
+    <widget class="QLineEdit" name="hostEdit"/>
+   </item>
+   <item row="4" column="1" colspan="3">
+    <widget class="QListWidget" name="listWidget"/>
+   </item>
+   <item row="0" column="1" colspan="2">
+    <widget class="QLabel" name="hostLabel">
+     <property name="text">
+      <string>Host:</string>
      </property>
     </widget>
    </item>
@@ -71,7 +102,7 @@
   <connection>
    <sender>buttonBox</sender>
    <signal>accepted()</signal>
-   <receiver>Dialog</receiver>
+   <receiver>TimeshiftDialog</receiver>
    <slot>accept()</slot>
    <hints>
     <hint type="sourcelabel">
@@ -87,7 +118,7 @@
   <connection>
    <sender>buttonBox</sender>
    <signal>rejected()</signal>
-   <receiver>Dialog</receiver>
+   <receiver>TimeshiftDialog</receiver>
    <slot>reject()</slot>
    <hints>
     <hint type="sourcelabel">
