--- a/tvnao/timeshift_dialog.ui
+++ b/tvnao/timeshift_dialog.ui
@@ -6,31 +6,14 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>439</width>
-    <height>377</height>
+    <width>579</width>
+    <height>672</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Dialog</string>
   </property>
   <layout class="QGridLayout" name="gridLayout_2">
-   <item row="5" column="2" colspan="2">
-    <widget class="QDialogButtonBox" name="buttonBox">
-     <property name="orientation">
-      <enum>Qt::Horizontal</enum>
-     </property>
-     <property name="standardButtons">
-      <set>QDialogButtonBox::Cancel</set>
-     </property>
-    </widget>
-   </item>
-   <item row="0" column="3">
-    <widget class="QLabel" name="portLabel">
-     <property name="text">
-      <string>Port:</string>
-     </property>
-    </widget>
-   </item>
    <item row="2" column="3">
     <widget class="QSpinBox" name="audioSpinBox">
      <property name="minimum">
@@ -41,7 +24,14 @@
      </property>
     </widget>
    </item>
-   <item row="3" column="3">
+   <item row="2" column="1" colspan="2">
+    <widget class="QLabel" name="audioLabel">
+     <property name="text">
+      <string>Audio Channel:</string>
+     </property>
+    </widget>
+   </item>
+   <item row="4" column="3">
     <widget class="QDateEdit" name="dateEdit">
      <property name="displayFormat">
       <string>ddd d.MM.yy</string>
@@ -50,6 +40,50 @@
       <bool>true</bool>
      </property>
     </widget>
+   </item>
+   <item row="0" column="1" colspan="2">
+    <widget class="QLabel" name="hostLabel">
+     <property name="text">
+      <string>Host:</string>
+     </property>
+    </widget>
+   </item>
+   <item row="6" column="2" colspan="2">
+    <widget class="QDialogButtonBox" name="buttonBox">
+     <property name="orientation">
+      <enum>Qt::Horizontal</enum>
+     </property>
+     <property name="standardButtons">
+      <set>QDialogButtonBox::Cancel</set>
+     </property>
+    </widget>
+   </item>
+   <item row="4" column="1">
+    <widget class="QPushButton" name="prevButton">
+     <property name="text">
+      <string>Prev</string>
+     </property>
+    </widget>
+   </item>
+   <item row="5" column="1" colspan="3">
+    <widget class="QListWidget" name="listWidget"/>
+   </item>
+   <item row="0" column="3">
+    <widget class="QLabel" name="portLabel">
+     <property name="text">
+      <string>Port:</string>
+     </property>
+    </widget>
+   </item>
+   <item row="4" column="2">
+    <widget class="QPushButton" name="nextButton">
+     <property name="text">
+      <string>Next</string>
+     </property>
+    </widget>
+   </item>
+   <item row="1" column="1" colspan="2">
+    <widget class="QLineEdit" name="hostEdit"/>
    </item>
    <item row="1" column="3">
     <widget class="QLineEdit" name="portEdit">
@@ -61,37 +95,20 @@
      </property>
     </widget>
    </item>
-   <item row="3" column="2">
-    <widget class="QPushButton" name="nextButton">
-     <property name="text">
-      <string>Next</string>
+   <item row="3" column="3">
+    <widget class="QLineEdit" name="channelEdit">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
      </property>
     </widget>
    </item>
-   <item row="3" column="1">
-    <widget class="QPushButton" name="prevButton">
+   <item row="3" column="1" colspan="2">
+    <widget class="QLabel" name="label">
      <property name="text">
-      <string>Prev</string>
-     </property>
-    </widget>
-   </item>
-   <item row="2" column="1" colspan="2">
-    <widget class="QLabel" name="audioLabel">
-     <property name="text">
-      <string>Audio Channel:</string>
-     </property>
-    </widget>
-   </item>
-   <item row="1" column="1" colspan="2">
-    <widget class="QLineEdit" name="hostEdit"/>
-   </item>
-   <item row="4" column="1" colspan="3">
-    <widget class="QListWidget" name="listWidget"/>
-   </item>
-   <item row="0" column="1" colspan="2">
-    <widget class="QLabel" name="hostLabel">
-     <property name="text">
-      <string>Host:</string>
+      <string>Channel ID Replacement:</string>
      </property>
     </widget>
    </item>
